--- a/devopsbox/nginx/docker-compose.yml
+++ b/devopsbox/nginx/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       container_name: devops_box_nginx
       restart: always
       # network_mode: host
+      # command: /bin/bash -c "mkdir /var/www && mkdir /var/www/html2 && chmod 777 /var/www/html2 && touch a.txt  && nginx -g daemon off;"
       volumes:
         - '${PWD}/nginx.conf:/etc/nginx/nginx.conf'
         - '${PWD}/html:/var/www/html'
