--- a/devopsbox/wekan/docker-compose.yml
+++ b/devopsbox/wekan/docker-compose.yml
@@ -107,7 +107,7 @@ services:
     # Disable MongoDB logs:
     command: mongod --logpath /dev/null --oplogSize 128 --quiet
     networks:
-      - wekan-tier
+      - devops-box
     expose:
       - 27017
     volumes:
@@ -127,7 +127,7 @@ services:
     container_name: wekan-app
     restart: always
     networks:
-      - wekan-tier
+      - devops-box
     #-------------------------------------------------------------------------------------
     # ==== BUILD wekan-app DOCKER CONTAINER FROM SOURCE, if you uncomment these ====
     # ==== and use commands: docker-compose up -d --build
@@ -677,5 +677,6 @@ volumes:
     driver: local
 
 networks:
-  wekan-tier:
-    driver: bridge
+  devops-box:
+    external: true
+    # driver: bridge
