add docker-compose-file and shell script

--- a/devopsbox/nginx/nginx.conf
+++ b/devopsbox/nginx/nginx.conf
@@ -29,28 +29,28 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 
-server {
-    listen 80;
-    server_name 192.168.99.102;
-
-    #默认主页
-    location / {
-        root   /var/www/html;
-        index  index.html index.htm index.nginx-debian.html;
-    }
-
-    location /jenkins {
-      return 302 http://192.168.99.102:8080;    
-    }
-
-    location /wekan {
-      return 302 http://192.168.99.102:8081;    
-    }
-
-    location /gitea {
-      return 302 http://192.168.99.102:8082;    
-    }
-
-  }
+#server {
+#    listen 80;
+#    server_name 192.168.99.102;
+#
+#    #默认主页
+#    location / {
+#        root   /var/www/html;
+#        index  index.html index.htm index.nginx-debian.html;
+#    }
+#
+#    location /jenkins {
+#      return 302 http://192.168.99.102:8080;    
+#    }
+#
+#    location /wekan {
+#      return 302 http://192.168.99.102:8081;    
+#    }
+#
+#    location /gitea {
+#      return 302 http://192.168.99.102:8082;    
+#    }
+#
+#  }
 
 }
