--- a/devopsbox/nginx/docker-compose.yml
+++ b/devopsbox/nginx/docker-compose.yml
@@ -9,5 +9,5 @@ services:
       network_mode: host
       volumes:
         - '${PWD}/nginx.conf:/etc/nginx/nginx.conf'
-        - '/var/www/html:/var/www/html'
+        - '${PWD}/html:/var/www/html'
 
