--- a/devopsbox/jenkins/docker-compose.yml
+++ b/devopsbox/jenkins/docker-compose.yml
@@ -8,4 +8,6 @@ docker_jenkins:
       - '50000:50000'
   
     volumes:
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
       - '${PWD}/jenkins_home:/var/jenkins_home'
